--- a/figma-design/style.css
+++ b/figma-design/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* Variaveis */
+/* Resets */
 blockquote,
 dl,
 dd,
@@ -15,77 +17,187 @@ pre {
   margin: 0;
 }
 
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
 body {
   font-family: 'Inter', sans-serif;
 }
 
+/* Classes Utilitarias */
+.hidden {
+  display: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+/* Classes dos componentes */
 .header {
-  background: #ffffff;
+  position: fixed;
+  z-index: 10;
+  top: 0rem;
+  left: 0rem;
+  right: 0rem;
   height: 4.5rem;
+  padding: 0rem 0.9375rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.16), 0px 4px 8px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.16), 0px 4px 8px rgba(0, 0, 0, 0.08);
+}
+
+.header .header__icon-menu:active path {
+  stroke: #56CCF2;
 }
 
 @media (min-width: 768px) {
   .header {
     height: 6rem;
   }
+  .header .header__icon-menu {
+    display: none;
+  }
 }
 
-main .section-home {
+main {
+  margin-top: 4.5rem;
+}
+
+@media (min-width: 768px) {
+  main {
+    margin-top: 6rem;
+  }
+}
+
+.navigation-drawer {
+  position: fixed;
+  top: 4.5rem;
+  left: 0rem;
+  right: 0rem;
+  bottom: 0rem;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+@media (min-width: 768px) {
+  .navigation-drawer {
+    display: none;
+  }
+}
+
+.navigation-drawer .navigation-drawer__content {
+  width: 82%;
+  height: 100%;
+  margin-left: auto;
+  background: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navigation-drawer .navigation-drawer__content .navigation-drawer__links {
+  padding: 1.875rem 0.9375rem 0rem 0.9375rem;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 1 0%;
+          flex: 2 1 0%;
+}
+
+.navigation-drawer .navigation-drawer__content .navigation-drawer__links a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.navigation-drawer .navigation-drawer__content .navigation-drawer__footer {
+  background-color: #E0E0E0;
+  background-image: url(img/wave1.svg);
+  background-position: 50% -1%;
+  background-repeat: no-repeat;
+  background-size: 101%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 6rem 0.9375rem 0rem 0.9375rem;
+}
+
+.navigation-drawer .navigation-drawer__content .navigation-drawer__footer a {
+  color: #0E7490;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.125rem;
+  -webkit-box-shadow: inset 0rem -0.375rem 0rem rgba(165, 243, 252, 0.4);
+          box-shadow: inset 0rem -0.375rem 0rem rgba(165, 243, 252, 0.4);
+}
+
+.section-home {
   min-height: 822px;
   background-image: url(img/shape1.svg), url(img/shape2.svg);
   background-position: right top;
   background-repeat: no-repeat;
   background-size: 15%, 50%;
-  -webkit-box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.16), inset 0px 4px 8px rgba(0, 0, 0, 0.08);
-          box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.16), inset 0px 4px 8px rgba(0, 0, 0, 0.08);
 }
 
 @media (min-width: 768px) {
-  main .section-home {
+  .section-home {
     background-size: auto;
   }
 }
 
-main .section-home .content {
+.section-home .content {
   padding: 3rem 0.9375rem 0rem 0.9375rem;
   width: 100%;
 }
 
 @media (min-width: 768px) {
-  main .section-home .content {
+  .section-home .content {
     max-width: 1200px;
     padding-top: 5rem;
     margin: 0rem auto;
   }
 }
 
-main .section-home .content h1,
-main .section-home .content h2,
-main .section-home .content h3,
-main .section-home .content p {
+.section-home .content h1,
+.section-home .content h2,
+.section-home .content h3,
+.section-home .content p {
   color: #2D3436;
 }
 
-main .section-home .content h1 {
+.section-home .content h1 {
   font-style: normal;
   font-size: 4rem;
 }
 
 @media (min-width: 768px) {
-  main .section-home .content h1 {
+  .section-home .content h1 {
     text-align: center;
     font-weight: 800;
     font-size: 6rem;
   }
 }
 
-main .section-home .content h2 {
+.section-home .content h2 {
   font-style: normal;
   font-size: 1.5rem;
 }
 
 @media (min-width: 768px) {
-  main .section-home .content h2 {
+  .section-home .content h2 {
     text-align: center;
     font-weight: 900;
     font-size: 4rem;
