--- a/figma-design/style.scss
+++ b/figma-design/style.scss
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-// Remove as margens padrão
+/* Variaveis */
+
+$navbar-height: 4.5rem;
+$navbar-desktop-height: 6rem;
+
+/* Resets */
+
 blockquote,
 dl,
 dd,
@@ -17,81 +23,178 @@ pre {
   margin: 0;
 }
 
-html {
-  // background-color: #A29BFE;
+a {
+  color: #000000;
+  text-decoration: none;
 }
+
+// html {
+  // background-color: #A29BFE;
+// }
 
 body {
   font-family: 'Inter', sans-serif;
 }
 
+/* Classes Utilitarias */
+// .disable-dbl-tap-zoom {
+//   touch-action: manipulation;
+// }
+
+.hidden {
+  display: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+/* Classes dos componentes */
+
 .header {
+  position: fixed;
+  z-index: 10;
+  top: 0rem;
+  left: 0rem;
+  right: 0rem;
+  height: $navbar-height;
+  padding: 0rem 0.9375rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   background: #ffffff;
-  height: 4.5rem;
+
+  box-shadow:
+    0px 2px 4px rgba(0, 0, 0, 0.16),
+    0px 4px 8px rgba(0, 0, 0, 0.08)
+  ;
+
+  .header__icon-menu {
+    &:active path {
+      stroke: #56CCF2;
+    }
+  }
 
   @media (min-width: 768px) {
-    height: 6rem;
+    height: $navbar-desktop-height;
+
+    .header__icon-menu {
+      display: none;
+    }
   }
 }
 
 main {
-  .section-home {
-    min-height: 822px;
-    background-image: url(img/shape1.svg), url(img/shape2.svg);
-    background-position: right top;
-    background-repeat: no-repeat;
-    background-size: 15%, 50%;
+  margin-top: $navbar-height;
 
-    // box-shadow aplicado no filho, pois box-shadow aplicado no pai não
-    // sobrepoe o filho
-    box-shadow:
-      inset 0px 2px 4px rgba(0, 0, 0, 0.16),
-      inset 0px 4px 8px rgba(0, 0, 0, 0.08)
-    ;
+  @media (min-width: 768px) {
+    margin-top: $navbar-desktop-height;
+  }
+}
+
+.navigation-drawer {
+  // height: 100vh;
+  // height: -webkit-fill-available;
+  // height: fill-available;
+  position: fixed;
+  top: $navbar-height;
+  left: 0rem;
+  right: 0rem;
+  bottom: 0rem;
+  background: rgba(0, 0, 0, 0.6);
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  .navigation-drawer__content {
+    width: 82%;
+    height: 100%;
+    margin-left: auto;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+
+    .navigation-drawer__links {
+      padding: 1.875rem 0.9375rem 0rem 0.9375rem;
+      flex: 2 1 0%;
+
+      a {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 1.5rem;
+      }
+    }
+
+    .navigation-drawer__footer {
+      background-color: #E0E0E0;
+      background-image: url(img/wave1.svg);
+      background-position: 50% -1%;
+      background-repeat: no-repeat;
+      background-size: 101%;
+      flex: 1;
+      padding: 6rem 0.9375rem 0rem 0.9375rem;
+
+      a {
+        color: #0E7490;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 1.125rem;
+        box-shadow: inset 0rem -0.375rem 0rem rgba(165, 243, 252, 0.4);
+      }
+    }
+  }
+
+}
+
+.section-home {
+  min-height: 822px;
+  background-image: url(img/shape1.svg), url(img/shape2.svg);
+  background-position: right top;
+  background-repeat: no-repeat;
+  background-size: 15%, 50%;
+
+  @media (min-width: 768px) {
+    background-size: auto;
+  }
+
+  .content {
+    padding: 3rem 0.9375rem 0rem 0.9375rem;
+    width: 100%;
 
     @media (min-width: 768px) {
-      background-size: auto;
+      max-width: 1200px;
+      padding-top: 5rem;
+      margin: 0rem auto;
     }
 
-    .content {
-      padding: 3rem 0.9375rem 0rem 0.9375rem;
-      width: 100%;
+    h1,
+    h2,
+    h3,
+    p {
+      color: #2D3436;
+    }
+
+    h1 {
+      font-style: normal;
+      font-size: 4rem;
 
       @media (min-width: 768px) {
-        max-width: 1200px;
-        padding-top: 5rem;
-        margin: 0rem auto;
-      }
-
-      h1,
-      h2,
-      h3,
-      p {
-        color: #2D3436;
-      }
-
-      h1 {
-        font-style: normal;
-        font-size: 4rem;
-
-        @media (min-width: 768px) {
-          text-align: center;
-          font-weight: 800;
-          font-size: 6rem;
-        }
-      }
-
-      h2 {
-        font-style: normal;
-        font-size: 1.5rem;
-
-        @media (min-width: 768px) {
-          text-align: center;
-          font-weight: 900;
-          font-size: 4rem;
-        }
+        text-align: center;
+        font-weight: 800;
+        font-size: 6rem;
       }
     }
 
+    h2 {
+      font-style: normal;
+      font-size: 1.5rem;
+
+      @media (min-width: 768px) {
+        text-align: center;
+        font-weight: 900;
+        font-size: 4rem;
+      }
+    }
   }
 }
