--- a/figma-design/style.css
+++ b/figma-design/style.css
@@ -31,6 +31,14 @@ body {
   display: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -88,6 +96,8 @@ main {
   right: 0rem;
   bottom: 0rem;
   background: rgba(0, 0, 0, 0.6);
+  -webkit-transition: visibility 0.4s cubic-bezier(0.77, 0, 0.18, 1), opacity 0.4s cubic-bezier(0.77, 0, 0.18, 1);
+  transition: visibility 0.4s cubic-bezier(0.77, 0, 0.18, 1), opacity 0.4s cubic-bezier(0.77, 0, 0.18, 1);
 }
 
 @media (min-width: 768px) {
