--- a/figma-design/style.scss
+++ b/figma-design/style.scss
@@ -45,6 +45,14 @@ body {
   display: none;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -102,6 +110,7 @@ main {
   right: 0rem;
   bottom: 0rem;
   background: rgba(0, 0, 0, 0.6);
+  transition: visibility 0.4s cubic-bezier(0.77,0,0.18,1), opacity 0.4s cubic-bezier(0.77,0,0.18,1);
 
   @media (min-width: 768px) {
     display: none;
