Melhorada transição na abertura do menu com animate.css

--- a/figma-design/style.scss
+++ b/figma-design/style.scss
@@ -45,13 +45,13 @@ body {
   display: none;
 }
 
-.invisible {
-  visibility: hidden;
-}
+// .invisible {
+//   visibility: hidden;
+// }
 
-.opacity-0 {
-  opacity: 0;
-}
+// .opacity-0 {
+//   opacity: 0;
+// }
 
 .overflow-hidden {
   overflow: hidden;
@@ -110,7 +110,6 @@ main {
   right: 0rem;
   bottom: 0rem;
   background: rgba(0, 0, 0, 0.6);
-  transition: visibility 0.4s cubic-bezier(0.77,0,0.18,1), opacity 0.4s cubic-bezier(0.77,0,0.18,1);
 
   @media (min-width: 768px) {
     display: none;
