Corrigido background position do navigation-drawer__footer

--- a/figma-design/style.scss
+++ b/figma-design/style.scss
@@ -137,7 +137,7 @@ main {
     .navigation-drawer__footer {
       background-color: #E0E0E0;
       background-image: url(img/wave1.svg);
-      background-position: 50% -1%;
+      background-position-y: -1%;
       background-repeat: no-repeat;
       background-size: 101%;
       flex: 1;
