--- a/figma-design/style.css
+++ b/figma-design/style.css
@@ -126,7 +126,7 @@ main {
 .navigation-drawer .navigation-drawer__content .navigation-drawer__footer {
   background-color: #E0E0E0;
   background-image: url(img/wave1.svg);
-  background-position: 50% -1%;
+  background-position-y: -1%;
   background-repeat: no-repeat;
   background-size: 101%;
   -webkit-box-flex: 1;
