--- a/figma-design/style-teste-grid.scss
+++ b/figma-design/style-teste-grid.scss
@@ -9,6 +9,10 @@
   grid-template-rows: repeat(8, 1fr);
   gap: 0.5rem;
 
+  @media (min-width: 640px) {
+    max-width: 360px;
+  }
+
   .frame {
     border-radius: 0.625rem;
 
@@ -22,50 +26,68 @@
   }
 
   .frame-1 {
-    background: #56CCF2;
+    background: #56CCF2 url(img/frames/1.png) no-repeat center;
+    background-size: cover;
     grid-column: 2 / 6;
     grid-row: 1 / 4;
   }
 
   .frame-2 {
-    background: #F2C94C;
+    background: #F2C94C url(img/frames/2.png) no-repeat left;
+    background-size: cover;
     grid-column: 6 / 7;
     grid-row: 2 / 4;
   }
 
   .frame-3 {
-    background: #5C5C5C;
+    background: #5C5C5C url(img/frames/3.png) no-repeat right;
+    background-size: cover;
     grid-column: 1 / 2;
     grid-row: 2 / 5;
   }
 
   .frame-4 {
-    background: #F2C94C;
+    background: #F2C94C url(img/frames/4.png) no-repeat center;
+    background-size: cover;
     grid-column: 2 / 4;
     grid-row: 4 / 6;
   }
 
   .frame-5 {
-    background: rgba(14, 116, 144, 1);
+    background: rgba(14, 116, 144, 1) url(img/frames/5.png) no-repeat left;
+    background-size: cover;
     grid-column: 4 / 7;
     grid-row: 4 / 7;
   }
 
   .frame-6 {
-    background: #56CCF2;
+    background: #56CCF2 url(img/frames/6.png) no-repeat right;
+    background-size: cover;
     grid-column: 1 / 2;
     grid-row: 5 / 7;
   }
 
   .frame-7 {
-    background: #5C5C5C;
+    background: #5C5C5C url(img/frames/7.png) no-repeat center;
+    background-size: cover;
     grid-column: 2 / 4;
     grid-row: 6 / 8;
   }
 
   .frame-8 {
-    background: rgba(108, 92, 231, 1);
-    grid-column: 4 / 6;
+    grid-column: 4 / 7;
     grid-row: 7 / 8;
+
+    button {
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 9999px;
+      color: #ffffff;
+      letter-spacing: 0.15625rem;
+      font-weight: bold;
+      font-size: 0.875rem;
+      cursor: pointer;
+      background: rgba(108, 92, 231, 1);
+    }
   }
 }
