--- a/figma-design/style.css
+++ b/figma-design/style.css
@@ -258,7 +258,7 @@ main {
 
 .grid-area {
   height: 30rem;
-  margin-top: 2rem;
+  margin: 2rem auto 0 auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[6];
@@ -268,9 +268,14 @@ main {
   gap: 0.5rem;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   .grid-area {
-    max-width: 360px;
+    padding: 0rem 1.875rem;
+    max-width: 1200px;
+    -ms-grid-columns: (1fr)[15];
+        grid-template-columns: repeat(15, 1fr);
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
   }
 }
 
@@ -286,6 +291,15 @@ main {
   border-radius: 0.625rem 0rem 0rem 0.625rem;
 }
 
+@media (min-width: 768px) {
+  .grid-area .frame.frame--left {
+    border-radius: 0.625rem;
+  }
+  .grid-area .frame.frame--right {
+    border-radius: 0.625rem;
+  }
+}
+
 .grid-area .frame-1 {
   background: #56CCF2 url(img/frames/1.png) no-repeat center;
   background-size: cover;
@@ -295,6 +309,17 @@ main {
   -ms-grid-row: 1;
   -ms-grid-row-span: 3;
   grid-row: 1 / 4;
+}
+
+@media (min-width: 768px) {
+  .grid-area .frame-1 {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 5;
+    grid-column: 5 / 10;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    grid-row: 1 / 4;
+  }
 }
 
 .grid-area .frame-2 {
@@ -308,6 +333,17 @@ main {
   grid-row: 2 / 4;
 }
 
+@media (min-width: 768px) {
+  .grid-area .frame-2 {
+    -ms-grid-column: 13;
+    -ms-grid-column-span: 3;
+    grid-column: 13 / 16;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2 / 4;
+  }
+}
+
 .grid-area .frame-3 {
   background: #5C5C5C url(img/frames/3.png) no-repeat right;
   background-size: cover;
@@ -317,6 +353,17 @@ main {
   -ms-grid-row: 2;
   -ms-grid-row-span: 3;
   grid-row: 2 / 5;
+}
+
+@media (min-width: 768px) {
+  .grid-area .frame-3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 3;
+    grid-row: 2 / 5;
+  }
 }
 
 .grid-area .frame-4 {
@@ -330,6 +377,17 @@ main {
   grid-row: 4 / 6;
 }
 
+@media (min-width: 768px) {
+  .grid-area .frame-4 {
+    -ms-grid-column: 10;
+    -ms-grid-column-span: 3;
+    grid-column: 10 / 13;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2 / 4;
+  }
+}
+
 .grid-area .frame-5 {
   background: #0e7490 url(img/frames/5.png) no-repeat left;
   background-size: cover;
@@ -339,6 +397,17 @@ main {
   -ms-grid-row: 4;
   -ms-grid-row-span: 3;
   grid-row: 4 / 7;
+}
+
+@media (min-width: 768px) {
+  .grid-area .frame-5 {
+    -ms-grid-column: 8;
+    -ms-grid-column-span: 5;
+    grid-column: 8 / 13;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 3;
+    grid-row: 4 / 7;
+  }
 }
 
 .grid-area .frame-6 {
@@ -352,6 +421,17 @@ main {
   grid-row: 5 / 7;
 }
 
+@media (min-width: 768px) {
+  .grid-area .frame-6 {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 3;
+    grid-column: 5 / 8;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 2;
+    grid-row: 4 / 6;
+  }
+}
+
 .grid-area .frame-7 {
   background: #5C5C5C url(img/frames/7.png) no-repeat center;
   background-size: cover;
@@ -363,6 +443,17 @@ main {
   grid-row: 6 / 8;
 }
 
+@media (min-width: 768px) {
+  .grid-area .frame-7 {
+    -ms-grid-column: 13;
+    -ms-grid-column-span: 3;
+    grid-column: 13 / 16;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 2;
+    grid-row: 4 / 6;
+  }
+}
+
 .grid-area .frame-8 {
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
@@ -370,6 +461,17 @@ main {
   -ms-grid-row: 7;
   -ms-grid-row-span: 1;
   grid-row: 7 / 8;
+}
+
+@media (min-width: 768px) {
+  .grid-area .frame-8 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1 / 5;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5 / 6;
+  }
 }
 
 .grid-area .frame-8 button {
@@ -382,5 +484,13 @@ main {
   font-size: 0.875rem;
   cursor: pointer;
   background: #6c5ce7;
+}
+
+@media (min-width: 768px) {
+  .grid-area .frame-8 button {
+    display: block;
+    margin: auto;
+    font-size: 1.125rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
