--- a/figma-design/style.scss
+++ b/figma-design/style.scss
@@ -117,6 +117,11 @@ main {
   }
 }
 
+footer {
+  height: 8rem;
+  background: #56CCF2;
+}
+
 .navigation-drawer {
   // height: 100vh;
   // height: -webkit-fill-available;
@@ -221,6 +226,10 @@ main {
       }
     }
   }
+}
+
+.section-2 {
+  min-height: 25vh;
 }
 
 .cookies-consent-bar {
