--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
+html {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,10 +26,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100vh;
-  /* mobile viewport bug fix */
-  min-height: -webkit-fill-available;
-  /* https://dev.to/jasperreddin/disabling-viewport-zoom-on-ios-14-web-browsers-l13 */
   -ms-touch-action: pan-y;
       touch-action: pan-y;
   background: #12b3eb;
