--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,15 @@
+html {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  /* mobile viewport bug fix */
-  min-height: -webkit-fill-available;
-  /* https://dev.to/jasperreddin/disabling-viewport-zoom-on-ios-14-web-browsers-l13 */
   touch-action: pan-y;
   background: #12b3eb;
 }
